crates/java-syntax/tests/snapshots/event_snapshots__event_class_with_method.snap
---
source: crates/java-syntax/tests/event_snapshots.rs
expression: out
---
SOURCE:
class A { void f() {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "f"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(CLASS_DECL, forward_parent=None)
Tombstone
AddToken
AddToken
StartNode(CLASS_BODY, forward_parent=None)
AddToken
StartNode(METHOD_DECL, forward_parent=None)
Tombstone
AddToken
AddToken
StartNode(FORMAL_PARAMETERS, forward_parent=None)
AddToken
AddToken
FinishNode
StartNode(BLOCK, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
FinishNode

PARSE_ERRORS:
<none>
