crates/java-syntax/tests/snapshots/event_snapshots__event_empty_class.snap
---
source: crates/java-syntax/tests/event_snapshots.rs
expression: out
---
SOURCE:
class A {}
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(CLASS_DECL, forward_parent=None)
Tombstone
AddToken
AddToken
StartNode(CLASS_BODY, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
FinishNode

PARSE_ERRORS:
<none>
