crates/java-syntax/tests/snapshots/event_snapshots__event_empty_record.snap
---
source: crates/java-syntax/tests/event_snapshots.rs
expression: out
---
SOURCE:
record R(int x) {}
TOKENS:
IDENTIFIER "record"
WHITESPACE " "
IDENTIFIER "R"
L_PAREN "("
INT_KW "int"
WHITESPACE " "
IDENTIFIER "x"
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(RECORD_DECL, forward_parent=None)
Tombstone
AddToken
AddToken
StartNode(FORMAL_PARAMETERS, forward_parent=None)
AddToken
StartNode(FORMAL_PARAMETER, forward_parent=None)
Tombstone
StartNode(TYPE, forward_parent=None)
AddToken
Tombstone
FinishNode
AddToken
FinishNode
AddToken
FinishNode
StartNode(RECORD_BODY, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
FinishNode

PARSE_ERRORS:
<none>
