crates/java-syntax/tests/snapshots/event_snapshots__event_local_annotation_type_is_an_error.snap
---
source: crates/java-syntax/tests/event_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void func() {
        @interface X {}
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
AT "@"
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "X"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(CLASS_DECL, forward_parent=None)
Tombstone
AddToken
AddToken
StartNode(CLASS_BODY, forward_parent=None)
AddToken
StartNode(METHOD_DECL, forward_parent=None)
Tombstone
AddToken
AddToken
StartNode(FORMAL_PARAMETERS, forward_parent=None)
AddToken
AddToken
FinishNode
StartNode(BLOCK, forward_parent=None)
AddToken
Tombstone
Error(ParseError { kind: Message("Expected an argument"), range: 39..40 })
Error(ParseError { kind: ExpectedConstruct(Statement), range: 39..40 })
AddToken
StartNode(INTERFACE_DECL, forward_parent=None)
AddToken
AddToken
StartNode(INTERFACE_BODY, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
FinishNode

PARSE_ERRORS:
ParseError { kind: Message("Expected an argument"), range: 39..40 }
ParseError { kind: ExpectedConstruct(Statement), range: 39..40 }
