crates/java-syntax/tests/snapshots/event_snapshots__event_recovery_missing_member_name.snap
---
source: crates/java-syntax/tests/event_snapshots.rs
expression: out
---
SOURCE:
class A { int ; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(CLASS_DECL, forward_parent=None)
Tombstone
AddToken
AddToken
StartNode(CLASS_BODY, forward_parent=None)
AddToken
StartNode(FIELD_DECL, forward_parent=None)
Tombstone
StartNode(TYPE, forward_parent=None)
AddToken
FinishNode
StartNode(VARIABLE_DECLARATOR_LIST, forward_parent=None)
StartNode(VARIABLE_DECLARATOR, forward_parent=None)
Error(ParseError { kind: ExpectedToken { expected: [IDENTIFIER, UNDERSCORE], found: Some(SEMICOLON) }, range: 14..15 })
StartNode(MISSING, forward_parent=None)
FinishNode
FinishNode
FinishNode
AddToken
FinishNode
AddToken
FinishNode
FinishNode
FinishNode

PARSE_ERRORS:
ParseError { kind: ExpectedToken { expected: [IDENTIFIER, UNDERSCORE], found: Some(SEMICOLON) }, range: 14..15 }
