crates/java-syntax/tests/snapshots/event_snapshots__event_type_parameters_class.snap
---
source: crates/java-syntax/tests/event_snapshots.rs
expression: out
---
SOURCE:
class A<T, U> {}
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
LESS "<"
IDENTIFIER "T"
COMMA ","
WHITESPACE " "
IDENTIFIER "U"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"

LEX_ERRORS:
<none>

EVENTS:
StartNode(ROOT, forward_parent=None)
StartNode(CLASS_DECL, forward_parent=None)
Tombstone
AddToken
AddToken
StartNode(TYPE_PARAMETERS, forward_parent=None)
AddToken
StartNode(TYPE_PARAMETER, forward_parent=None)
AddToken
FinishNode
AddToken
StartNode(TYPE_PARAMETER, forward_parent=None)
AddToken
FinishNode
AddToken
FinishNode
StartNode(CLASS_BODY, forward_parent=None)
AddToken
AddToken
FinishNode
FinishNode
FinishNode

PARSE_ERRORS:
<none>
